--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,18 +5,21 @@ on:
     branches:
       - main
   schedule:
-    - cron: '05 8 */4 * *'  # 2:05am Mountain time every 4 days
-  #push:
-  #  branches:
-  #    - main
-  #  paths-ignore:
-  #    - '**/README.md'
-  #    - '**/claude.md'
-  #    - 'repo_files/**'
+    - cron: '05 8 */5 * *'  # 2:05am Mountain time every 5 days
+    # 
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+      - '**/README.md'
+      - '**/claude.md'
+      - 'repo_files/**'
+      - 'system_files/**' # modifcations to custom system files are usually small don't warrent a full rebuild
   workflow_dispatch:
 
 env:
-  IMAGE_DESC: "My Customized Universal Blue Image"
+  IMAGE_DESC: "My Customized Bazzite Image"
   IMAGE_KEYWORDS: "bootc,ublue,universal-blue"
   IMAGE_LOGO_URL: "https://avatars.githubusercontent.com/u/120078124?s=200&v=4"  # Put your own image here for a fancy profile on https://artifacthub.io/!
   IMAGE_NAME: "${{ github.event.repository.name }}"  # output image name, usually same as repo name
@@ -24,7 +27,7 @@ env:
   DEFAULT_TAG: "latest"
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-${{ inputs.brand_name}}-${{ inputs.stream_name }}
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
@@ -175,7 +178,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lowercase Registry
+      - name: Lowercase Registry 
         id: registry_case
         uses: ASzc/change-string-case-action@v6
         with:
